# gallery

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.jsx  index.css  main.jsx  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  raw.rs
src/components/: CameraFilesWindow.jsx  ContextMenu.jsx  Layout.jsx  MainContent.jsx  MessageModal.jsx  PhotoDetailsSidebar.jsx  SettingsModal.jsx  Sidebar.jsx  Topbar.jsx  TreeNode.jsx  WindowMenu.jsx
src/components/settings/: Albums.jsx  Appearance.jsx  General.jsx
src/errors/: fsErrorPopulator.js
src/services/: albumService.js  metadataService.js  settingsService.js
src/stores/: albumStore.js  modalStore.js  photoStore.js  settingsStore.js  themeStore.js  viewStore.js
