[package]
name = "asm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { features = ["sqlite"], version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
md5 = "0.8.0"
rayon = "1.10.0"
rexif = "0.7.5"
rsraw = "0.1.0"
image = "0.25.8"
rexiv2 = "0.10.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
